--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ระบบจองสินค้า - ลิสแบน & เสื้อผ้า</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body class="bg-gradient-to-br from-purple-50 to-pink-50 min-h-screen font-sans">
     <div class="container mx-auto px-4 py-8 max-w-4xl">
@@ -50,11 +51,9 @@
             </div>
 
             <!-- Search and Filter -->
-            <div class="mb-6 flex flex-col md:flex-row gap-4">
-                <div class="flex-1">
-                    <input type="text" id="searchOrder" placeholder="ค้นหาด้วยชื่อ, เบอร์โทร หรือหมายเลขคำสั่งซื้อ..." class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent">
-                </div>
-                <select id="statusFilter" class="px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent">
+            <div class="mb-6 flex flex-col md:flex-row gap-4 items-center">
+                <input type="text" id="searchOrder" placeholder="ค้นหาด้วยชื่อ, เบอร์โทร หรือหมายเลขคำสั่งซื้อ..." class="flex-1 w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent">
+                <select id="statusFilter" class="w-full md:w-auto px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent">
                     <option value="">ทุกสถานะ</option>
                     <option value="รอชำระเงิน">รอชำระเงิน</option>
                     <option value="รอตรวจสอบการชำระเงิน">รอตรวจสอบการชำระเงิน</option>
@@ -395,7 +394,7 @@
                         📎 อัปโหลดสลิปการโอนเงิน <span class="text-red-500">*</span>
                     </label>
                     <div class="border-2 border-dashed border-gray-300 rounded-lg p-6 text-center hover:border-purple-400 transition-colors">
-                        <input type="file" id="paymentSlip" accept="image/*" class="hidden" required>
+                        <input type="file" id="paymentSlip" accept="image/*" class="hidden">
                         <div id="uploadArea" class="cursor-pointer" onclick="document.getElementById('paymentSlip').click()">
                             <div class="text-4xl mb-2">📷</div>
                             <div class="text-gray-600 mb-2">คลิกเพื่อเลือกไฟล์ หรือลากไฟล์มาวาง</div>
