--- a/index.html
+++ b/index.html
@@ -168,6 +168,21 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Gender Selection -->
+                    <div id="genderSelection" class="mt-8 hidden">
+                        <h3 class="text-lg font-semibold text-gray-700 mb-4">🚻 เลือกเพศ</h3>
+                        <div class="flex flex-wrap gap-3">
+                            <label class="flex items-center justify-center w-24 h-16 border-2 border-gray-200 rounded-lg hover:border-purple-300 cursor-pointer transition-colors">
+                                <input type="radio" name="gender" value="male" class="sr-only">
+                                <span class="font-semibold">ชาย</span>
+                            </label>
+                            <label class="flex items-center justify-center w-24 h-16 border-2 border-gray-200 rounded-lg hover:border-purple-300 cursor-pointer transition-colors">
+                                <input type="radio" name="gender" value="female" class="sr-only">
+                                <span class="font-semibold">หญิง</span>
+                            </label>
+                        </div>
+                    </div>
+
                     <div id="sizeSelection" class="mt-8 hidden">
                         <h3 class="text-lg font-semibold text-gray-700 mb-4">📏 เลือกไซส์เสื้อ</h3>
                         <div class="flex flex-wrap gap-3">
