7/10//2568 เพิ่ม ดูไซต์เสื้อ

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
     </style>
 </head>
-<body class="bg-gray-50 font-sans text-gray-800">
+<body class="bg-gray-50 font-sans text-gray-800 break-words">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 max-w-7xl">
         <!-- Header -->
         <header class="text-center mb-8 md:mb-12">
@@ -184,7 +184,7 @@
                     </div>
 
                     <div id="sizeSelection" class="mt-8 hidden">
-                        <h3 class="text-lg font-semibold text-gray-700 mb-4">📏 เลือกไซส์เสื้อ</h3>
+                        <h3 class="text-lg font-semibold text-gray-700 mb-4">📏 เลือกไซส์เสื้อ  <a href="#" id="show-size-chart" class="text-purple-600 hover:underline">ดูตัวอย่างไซต์เสื้อ</a></h3>
                         <div class="flex flex-wrap gap-3">
                             <!-- Sizes will be populated by JS -->
                         </div>
