--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></link>
+    <link rel="stylesheet" href="admin/vendor/datatables/dataTables.bootstrap4.min.css">
 
     <!-- Google Fonts: Anuphan -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -89,7 +90,7 @@
                     </select>
                 </div>
                 <div class="overflow-x-auto">
-                    <table class="w-full border-collapse">
+                    <table class="w-full border-collapse" id="ordersTable">
                         <thead>
                             <tr class="bg-gray-50">
                                 <th class="border border-gray-200 px-4 py-3 text-left font-semibold text-gray-700">หมายเลขคำสั่งซื้อ</th>
@@ -452,6 +453,8 @@
         </div>
     </div>
 
+    <script src="admin/vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="admin/vendor/datatables/dataTables.bootstrap4.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
