--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></link>
-    <link rel="stylesheet" href="admin/vendor/datatables/dataTables.bootstrap4.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></link>   
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.3.4/css/dataTables.tailwindcss.css">
     <!-- Google Fonts: Anuphan -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -90,19 +89,19 @@
                     </select>
                 </div>
                 <div class="overflow-x-auto">
-                    <table class="w-full border-collapse" id="ordersTable">
-                        <thead>
-                            <tr class="bg-gray-50">
-                                <th class="border border-gray-200 px-4 py-3 text-left font-semibold text-gray-700">หมายเลขคำสั่งซื้อ</th>
-                                <th class="border border-gray-200 px-4 py-3 text-left font-semibold text-gray-700">ชื่อลูกค้า</th>
-                                <th class="border border-gray-200 px-4 py-3 text-left font-semibold text-gray-700">เบอร์โทร</th>
-                                <th class="border border-gray-200 px-4 py-3 text-left font-semibold text-gray-700">ของที่ระลึก</th>
-                                <th class="border border-gray-200 px-4 py-3 text-left font-semibold text-gray-700">ยอดรวม</th>
-                                <th class="border border-gray-200 px-4 py-3 text-left font-semibold text-gray-700">สถานะ</th>
-                                <th class="border border-gray-200 px-4 py-3 text-left font-semibold text-gray-700">วันที่สั่ง</th>
+                    <table class="min-w-full divide-y divide-gray-200" id="ordersTable">
+                        <thead class="bg-pink-100">
+                            <tr>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-pink-800 uppercase tracking-wider rounded-tl-lg">หมายเลขคำสั่งซื้อ</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-pink-800 uppercase tracking-wider">ชื่อลูกค้า</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-pink-800 uppercase tracking-wider">เบอร์โทร</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-pink-800 uppercase tracking-wider">ของที่ระลึก</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-pink-800 uppercase tracking-wider">ยอดรวม</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-pink-800 uppercase tracking-wider">สถานะ</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-pink-800 uppercase tracking-wider rounded-tr-lg">วันที่สั่ง</th>
                             </tr>
                         </thead>
-                        <tbody id="ordersTableBody"></tbody>
+                        <tbody class="bg-white divide-y divide-gray-200" id="ordersTableBody"></tbody>
                     </table>
                 </div>
                 <div id="emptyState" class="text-center py-12 hidden">
@@ -453,8 +452,12 @@
         </div>
     </div>
 
-    <script src="admin/vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="admin/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+    <script src="admin/vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="admin/vendor/datatables/jquery.dataTables.min.js"></script> -->
+
+    <script src="https://cdn.datatables.net/2.3.4/js/dataTables.js"></script>
+    <script src="https://cdn.datatables.net/2.3.4/js/dataTables.tailwindcss.js"></script>
+
     <script src="js/app.js"></script>
 </body>
 </html>
