--- a/index.html
+++ b/index.html
@@ -426,8 +426,21 @@
                     </div>
                 </div>
             </div>
+           
         </main>
+         <footer class="border-gray-200">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-500">
+            <p class="text-sm">
+                &copy; 2025 ระบบจองของที่ระลึก "ร้อยดวงใจแห่งรัก" คืนสู่เหย้าชาว จ.ป. จ.ว. และ สกจ. All Rights Reserved.
+            </p>
+            <p class="text-sm mt-2">
+                Developed by <a href="https://www.facebook.com/dekpiano" class="text-purple-600 hover:underline">Dekpiano</a>
+            </p>
+        </div>
+    </footer>
     </div>
+
+    
 
     <!-- Payment Details Modal -->
     <div id="paymentModal" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex items-center justify-center p-4">
