--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                         เลือกของที่ระลึก
                     </h2>
                     <div class="grid md:grid-cols-2 gap-8">
+                        <!-- Bracelet Section -->
                         <div>
                             <h3 class="text-lg font-semibold text-gray-700 mb-4">📿 กำไลข้อมือ</h3>
                             <div class="space-y-3">
@@ -134,66 +135,80 @@
                                     <div class="flex-1">
                                         <div class="font-medium">กำไลข้อมือยาง</div>
                                         <div class="text-sm text-gray-500">กำไลข้อมือยางคุณภาพดี</div>
-                                        <div class="text-purple-600 font-semibold">฿100 / ชิ้น</div>
+                                        <div id="braceletPrice" class="text-purple-600 font-semibold">฿100 / ชิ้น</div>
                                     </div>
                                 </label>
                                 <div id="braceletQuantity" class="mt-3 hidden">
                                     <label class="block text-sm font-medium text-gray-700 mb-2">จำนวน</label>
                                     <div class="flex items-center space-x-3">
-                                        <button type="button" onclick="updateQuantity('bracelet', -1)" class="w-10 h-10 bg-gray-200 hover:bg-gray-300 rounded-lg flex items-center justify-center font-bold text-gray-600 transition-colors">-</button>
-                                        <input type="number" id="braceletQty" value="1" min="1" class="w-20 text-center border border-gray-300 rounded-lg py-2 font-semibold" onchange="updateQuantity('bracelet', 0)">
-                                        <button type="button" onclick="updateQuantity('bracelet', 1)" class="w-10 h-10 bg-gray-200 hover:bg-gray-300 rounded-lg flex items-center justify-center font-bold text-gray-600 transition-colors">+</button>
+                                        <button type="button" onclick="updateBraceletQuantity(-1)" class="w-10 h-10 bg-gray-200 hover:bg-gray-300 rounded-lg flex items-center justify-center font-bold text-gray-600 transition-colors">-</button>
+                                        <input type="number" id="braceletQty" value="1" min="1" class="w-20 text-center border border-gray-300 rounded-lg py-2 font-semibold" onchange="updateBraceletQuantity(0)">
+                                        <button type="button" onclick="updateBraceletQuantity(1)" class="w-10 h-10 bg-gray-200 hover:bg-gray-300 rounded-lg flex items-center justify-center font-bold text-gray-600 transition-colors">+</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div>
+
+                        <!-- Shirt Section -->
+                        <div class="p-4 border-2 border-gray-200 rounded-lg">
                             <h3 class="text-lg font-semibold text-gray-700 mb-4">👕 เสื้อผ้า</h3>
-                            <div class="space-y-3">
-                                <label class="flex items-center p-4 border-2 border-gray-200 rounded-lg hover:border-purple-300 cursor-pointer transition-colors">
-                                    <input type="checkbox" id="shirtCheckbox" value="shirt" class="mr-3 w-5 h-5 text-purple-500 rounded">
-                                    <img id="shirtImage" src="" alt="เสื้อผ้า" class="w-16 h-16 object-cover rounded-lg mr-4 hidden">
-                                    <div class="flex-1">
-                                        <div class="font-medium">เสื้อผ้า</div>
-                                        <div class="text-sm text-gray-500">เสื้อผ้าคุณภาพดี</div>
-                                        <div class="text-purple-600 font-semibold">฿300 / ตัว</div>
-                                    </div>
-                                </label>
-                                <div id="shirtQuantity" class="mt-3 hidden">
-                                    <label class="block text-sm font-medium text-gray-700 mb-2">จำนวน</label>
-                                    <div class="flex items-center space-x-3">
-                                        <button type="button" onclick="updateQuantity('shirt', -1)" class="w-10 h-10 bg-gray-200 hover:bg-gray-300 rounded-lg flex items-center justify-center font-bold text-gray-600 transition-colors">-</button>
-                                        <input type="number" id="shirtQty" value="1" min="1" class="w-20 text-center border border-gray-300 rounded-lg py-2 font-semibold" onchange="updateQuantity('shirt', 0)">
-                                        <button type="button" onclick="updateQuantity('shirt', 1)" class="w-10 h-10 bg-gray-200 hover:bg-gray-300 rounded-lg flex items-center justify-center font-bold text-gray-600 transition-colors">+</button>
-                                    </div>
+                            <img id="shirtImage" src="" alt="เสื้อผ้า" class="w-32 h-32 object-cover rounded-lg mb-4 hidden mx-auto">
+                            <div id="shirtInfo" class="text-center">
+                                <div class="font-medium">เสื้อผ้า</div>
+                                <div class="text-sm text-gray-500">เสื้อผ้าคุณภาพดี</div>
+                                <div id="shirtPrice" class="text-purple-600 font-semibold">฿300 / ตัว</div>
+                            </div>
+                            
+                            <div id="genderSelection" class="mt-4">
+                                <h4 class="text-md font-semibold text-gray-700 mb-2">🚻 เลือกเพศ</h4>
+                                <div class="flex flex-wrap gap-3">
+                                    <label class="flex items-center justify-center w-24 h-12 border-2 border-gray-200 rounded-lg hover:border-purple-300 cursor-pointer transition-colors">
+                                        <input type="radio" name="gender" value="male" class="sr-only">
+                                        <span class="font-semibold">ชาย</span>
+                                    </label>
+                                    <label class="flex items-center justify-center w-24 h-12 border-2 border-gray-200 rounded-lg hover:border-purple-300 cursor-pointer transition-colors">
+                                        <input type="radio" name="gender" value="female" class="sr-only">
+                                        <span class="font-semibold">หญิง</span>
+                                    </label>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <!-- Gender Selection -->
-                    <div id="genderSelection" class="mt-8 hidden">
-                        <h3 class="text-lg font-semibold text-gray-700 mb-4">🚻 เลือกเพศ</h3>
-                        <div class="flex flex-wrap gap-3">
-                            <label class="flex items-center justify-center w-24 h-16 border-2 border-gray-200 rounded-lg hover:border-purple-300 cursor-pointer transition-colors">
-                                <input type="radio" name="gender" value="male" class="sr-only">
-                                <span class="font-semibold">ชาย</span>
-                            </label>
-                            <label class="flex items-center justify-center w-24 h-16 border-2 border-gray-200 rounded-lg hover:border-purple-300 cursor-pointer transition-colors">
-                                <input type="radio" name="gender" value="female" class="sr-only">
-                                <span class="font-semibold">หญิง</span>
-                            </label>
+
+                            <div id="sizeSelection" class="mt-4">
+                                <h4 class="text-md font-semibold text-gray-700 mb-2">📏 เลือกไซส์เสื้อ <a href="#" id="show-size-chart" class="text-purple-600 hover:underline">ดูตัวอย่างขนาดไซส์เสื้อ</a></h4>
+                                <div class="flex flex-wrap gap-3">
+                                    <!-- Sizes will be populated by JS -->
+                                </div>
+                            </div>
+
+                            <div class="mt-4">
+                                <label class="block text-sm font-medium text-gray-700 mb-2">จำนวน</label>
+                                <div class="flex items-center space-x-3">
+                                    <button type="button" id="shirt-qty-minus" class="w-10 h-10 bg-gray-200 hover:bg-gray-300 rounded-lg flex items-center justify-center font-bold text-gray-600 transition-colors">-</button>
+                                    <input type="number" id="shirtQty" value="1" min="1" class="w-20 text-center border border-gray-300 rounded-lg py-2 font-semibold">
+                                    <button type="button" id="shirt-qty-plus" class="w-10 h-10 bg-gray-200 hover:bg-gray-300 rounded-lg flex items-center justify-center font-bold text-gray-600 transition-colors">+</button>
+                                </div>
+                            </div>
+
+                            <div class="mt-6">
+                                <button id="addToCartBtn" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-4 rounded-lg transition-colors flex items-center justify-center gap-2">
+                                    <i class="fas fa-cart-plus"></i> เพิ่มลงตะกร้า
+                                </button>
+                            </div>
                         </div>
                     </div>
 
-                    <div id="sizeSelection" class="mt-8 hidden">
-                        <h3 class="text-lg font-semibold text-gray-700 mb-4">📏 เลือกไซส์เสื้อ  <a href="#" id="show-size-chart" class="text-purple-600 hover:underline">ดูตัวอย่างไซต์เสื้อ</a></h3>
-                        <div class="flex flex-wrap gap-3">
-                            <!-- Sizes will be populated by JS -->
+                    <!-- Cart Display -->
+                    <div id="cartContainer" class="mt-8">
+                        <h3 class="text-xl font-bold text-gray-800 mb-4">🛒 ตะกร้าสินค้าของคุณ</h3>
+                        <div id="cartItems" class="space-y-4">
+                            <!-- Cart items will be populated by JS -->
+                            <p class="text-center text-gray-500 py-4">ตะกร้าของคุณว่างเปล่า</p>
                         </div>
                     </div>
+
                     <div class="mt-8 p-6 bg-gradient-to-r from-purple-100 to-pink-100 rounded-xl border-2 border-purple-200">
                         <div class="flex items-center">
-                            <input type="checkbox" id="comboOption" class="mr-4 w-5 h-5 text-purple-500 rounded">
+                            <input type="checkbox" id="comboOption" class="mr-4 w-5 h-5 text-purple-500 rounded" disabled>
                             <img id="comboImage" src="" alt="คอมโบพิเศษ" class="w-16 h-16 object-cover rounded-lg mr-4 hidden">
                             <div class="flex-1">
                                 <div class="font-semibold text-purple-800">🎁 คอมโบพิเศษ: กำไลข้อมือ + เสื้อผ้า</div>
@@ -205,9 +220,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
                     <div class="mt-6 p-4 bg-gray-50 rounded-lg">
                         <div class="text-lg font-semibold text-gray-800">สรุปราคา</div>
                         <div id="priceBreakdown" class="mt-2 space-y-1 text-sm text-gray-600">
